2011-04-21 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 9.0.4

2011-02-01 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: SECURITY_PATCH++, fixes CVE-2010-4015

2011-01-31 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 9.0.3
	* DEPENDS: removed deprecated dependencies
	* BUILD: removed deprecated configure flags

2011-01-30 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 9.0.2

2010-10-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
	* DETAILS: version 9.0.1

2010-10-24 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: version 8.4.5
	  SECURITY_PATCH++ , fixes CVE-2010-3433, bug #15887
	  http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2010-3433

2010-05-16 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 8.4.4

2010-04-10 Elisamuel Resto <ryuji@sourcemage.org>
	* FINAL: changed URL to the HowTo on our wiki

2010-03-15 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 8.4.3, SECURITY_PATCH=7

2009-12-14 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 8.4.2; removed broken mirrors

2009-09-08 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 8.4.1

2009-08-24 Treeve Jelbert <treeve@sourcemage.org>
	* BUILD,INSTALL: fix

2009-08-22 Vlad Glagolev <stealth@sourcemage.org>
	* BUILD: properly build extensions
	* INSTALL: properly install extensions; don't install default log file

2009-08-04 Remko van der Vossen <wich@sourcemage.org>
	* CONFIGURE: updated wiki link
	* DEPENDS: added zlib optional depends

2009-07-26 Elisamuel Resto <ryuji@sourcemage.org>
	* BUILD: filter -ffast-math from CFLAGS (Bug #15319)

2009-07-19 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: Updated to 8.4.0
	* BUILD: specify --with-system-tzdata; add missing &&

2009-03-17 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: updated spell to 8.3.7, SECURITY_PATCH+=1

2009-03-03 Vlad Glagolev <stealth@sourcemage.org>