@@ -1,6 +1,8 @@
 default_pre_build &&
 cd "$SOURCE_DIRECTORY" &&
 
+patch -p0 < "$SPELL_DIRECTORY/perl514.patch" &&
+
 if [[ $PGSQL_CLUSTER == y ]]; then
   verify_file 2 &&
   zcat "$SOURCE_CACHE/$SOURCE2" | patch -p1
