@@ -1,3 +1,7 @@
+2011-05-21 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: apply the patch
+	* perl514.patch: added, to fix compilation with perl 5.14
+
 2011-04-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 9.0.4
 
